ci: temp disable of layer cache

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,8 +42,8 @@ jobs:
             type=gha
             type=registry,ref=${{ env.IMAGE_NAME_FULL }}:latest
             type=registry,ref=${{ env.IMAGE_NAME_FULL }}:buildcache
-          cache-to: |
-            type=gha
+          # cache-to: |
+          #   type=gha
           tags: ${{ env.IMAGE_NAME_FULL }}:latest
           target: full
 
